--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://appservice.azureedge.net/images/static-apps/v3/favicon.svg"
-        type="image/x-icon">
+    <link rel="shortcut icon" href="img/maresa_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
-    <title>WebChatBot</title>
+    <title>HelpDesk BOT</title>
 </head>
 
 <body>
@@ -18,7 +17,7 @@
             <img src="img/maresa_logo.png" alt="">
         </div>
         <div id="loading_text">
-            CARGANDO MART...
+            Cargando HelpDesk BOT...
         </div>
     </div>
     <script>
